--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
 	},
 	"husky": {
 		"hooks": {
-			"pre-commit": "lint-staged"
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint --config .commitlintrc.js -E HUSKY_GIT_PARAMS"
 		}
 	},
 	"devDependencies": {
+		"@commitlint/cli": "19.2.0",
+		"@commitlint/config-conventional": "19.1.0",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "7.2.0",
 		"eslint": "^8.0.1",
