--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"private": false,
 	"scripts": {
 		"commit": "git-cz",
+		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
 		"prepare": "husky install",
 		"lint": "npm run lint-eslint && npm run lint-stylelint",
 		"lint-eslint": "eslint -c .eslintrc.js --ext .ts,.tsx,.js src",
