✨feat: 完整的react+ts开发环境

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,7 @@
 		"noEmit": true // 只想使用tsc的类型检查作为函数时（当其他工具（例如Babel实际编译）时）使用它
 	},
 	"include": [
-		"src/**/*" // 这将包括 src 目录下的所有文件
+		"src/**/*", // 这将包括 src 目录下的所有文件
+		"typings/**/*"
 	]
 }
