--- a/package.json
+++ b/package.json
@@ -29,11 +29,19 @@
 		}
 	},
 	"devDependencies": {
+		"@babel/core": "7.24.0",
+		"@babel/plugin-transform-runtime": "7.24.0",
+		"@babel/preset-env": "7.24.0",
+		"@babel/preset-react": "7.23.3",
+		"@babel/preset-typescript": "7.23.3",
 		"@commitlint/cli": "19.2.0",
 		"@commitlint/config-conventional": "19.1.0",
+		"@types/react": "18.2.66",
+		"@types/react-dom": "18.2.22",
 		"@typescript-eslint/eslint-plugin": "^6.4.0",
 		"@typescript-eslint/parser": "7.2.0",
 		"autoprefixer": "10.4.18",
+		"babel-loader": "9.1.3",
 		"clean-webpack-plugin": "4.0.0",
 		"commitizen": "^4.3.0",
 		"commitlint-config-cz": "^0.13.3",
@@ -45,6 +53,7 @@
 		"eslint": "^8.0.1",
 		"eslint-config-prettier": "9.1.0",
 		"eslint-config-standard-with-typescript": "^43.0.1",
+		"eslint-import-resolver-typescript": "3.6.1",
 		"eslint-plugin-import": "^2.25.2",
 		"eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
 		"eslint-plugin-promise": "^6.0.0",
@@ -79,5 +88,10 @@
 		"commitizen": {
 			"path": "node_modules/cz-customizable"
 		}
+	},
+	"dependencies": {
+		"@babel/runtime-corejs3": "7.24.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
 	}
 }
