--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,5 @@ sketch
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+
+*storybook.log
