--- a/package.json
+++ b/package.json
@@ -1,111 +1,143 @@
 {
-  "name": "lint_demo",
-  "version": "1.0.0",
-  "description": "a lint demo ",
-  "main": "dist/boundle.js",
-  "author": "xxx",
-  "license": "MIT",
-  "private": false,
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "ie >= 9",
-    "not op_mini all"
-  ],
-  "scripts": {
-    "commit": "git-cz",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
-    "prepare": "husky install",
-    "lint": "npm run lint-eslint && npm run lint-stylelint",
-    "lint-eslint": "eslint -c .eslintrc.js --ext .ts,.tsx,.js src",
-    "lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{less,css,scss}",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint --config .commitlintrc.js -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "devDependencies": {
-    "@babel/core": "7.24.0",
-    "@babel/plugin-transform-runtime": "7.24.0",
-    "@babel/preset-env": "7.24.0",
-    "@babel/preset-react": "7.23.3",
-    "@babel/preset-typescript": "7.23.3",
-    "@chromatic-com/storybook": "^1.3.1",
-    "@commitlint/cli": "19.2.0",
-    "@commitlint/config-conventional": "19.1.0",
-    "@storybook/addon-essentials": "^8.0.6",
-    "@storybook/addon-interactions": "^8.0.6",
-    "@storybook/addon-links": "^8.0.6",
-    "@storybook/addon-onboarding": "^8.0.6",
-    "@storybook/blocks": "^8.0.6",
-    "@storybook/react": "^8.0.6",
-    "@storybook/react-vite": "^8.0.6",
-    "@storybook/test": "^8.0.6",
-    "@types/react": "18.2.66",
-    "@types/react-dom": "18.2.22",
-    "@typescript-eslint/eslint-plugin": "^6.4.0",
-    "@typescript-eslint/parser": "7.2.0",
-    "autoprefixer": "10.4.18",
-    "babel-loader": "9.1.3",
-    "clean-webpack-plugin": "4.0.0",
-    "commitizen": "^4.3.0",
-    "commitlint-config-cz": "^0.13.3",
-    "conventional-changelog-cli": "4.1.0",
-    "cross-env": "7.0.3",
-    "css-loader": "6.10.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "cz-customizable": "^7.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.1",
-    "eslint-import-resolver-typescript": "3.6.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-storybook": "^0.8.0",
-    "html-webpack-plugin": "5.6.0",
-    "husky": "9.0.11",
-    "less": "4.2.0",
-    "less-loader": "12.2.0",
-    "lint-staged": "15.2.2",
-    "node-sass": "9.0.0",
-    "postcss": "8.4.35",
-    "postcss-flexbugs-fixes": "5.0.2",
-    "postcss-loader": "8.1.1",
-    "postcss-normalize": "10.0.1",
-    "postcss-preset-env": "9.5.1",
-    "prettier": "3.2.5",
-    "sass-loader": "14.1.1",
-    "storybook": "^8.0.6",
-    "style-loader": "3.3.4",
-    "stylelint": "16.2.1",
-    "stylelint-config-prettier": "9.0.5",
-    "stylelint-config-rational-order": "0.1.2",
-    "stylelint-config-standard": "36.0.0",
-    "stylelint-declaration-block-no-ignored-properties": "2.8.0",
-    "stylelint-prettier": "5.0.0",
-    "typescript": "*",
-    "vite": "^5.2.8",
-    "webpack": "5.90.3",
-    "webpack-cli": "5.1.4",
-    "webpack-dev-server": "5.0.3",
-    "webpack-merge": "5.10.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-customizable"
-    }
-  },
-  "dependencies": {
-    "@babel/runtime-corejs3": "7.24.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  }
+	"name": "lint_demo",
+	"version": "1.0.0",
+	"description": "a lint demo ",
+	"main": "./dist/cjs/index.js",
+	"module": "./dist/esm/index.js",
+	"types": "./dist/index.d.ts",
+	"exports": {
+		".": {
+			"import": "./dist/esm/index.js",
+			"require": "./dist/cjs/index.js"
+		}
+	},
+	"files": [
+		"dist"
+	],
+	"author": "xxx",
+	"license": "MIT",
+	"private": false,
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"ie >= 9",
+		"not op_mini all"
+	],
+	"engines": {
+		"node": ">=18"
+	},
+	"scripts": {
+		"commit": "git-cz",
+		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+		"prepare": "husky install",
+		"lint": "npm run lint-eslint && npm run lint-stylelint",
+		"lint-eslint": "eslint -c .eslintrc.js --ext .ts,.tsx,.js src",
+		"lint-stylelint": "stylelint --config .stylelintrc.js src/**/*.{less,css,scss}",
+		"start": "cross-env NODE_ENV=development webpack-dev-server --config ./scripts/config/webpack.dev.js",
+		"build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.prod.js",
+		"storybook": "storybook dev -p 6006",
+		"build-storybook": "storybook build",
+		"buildRc": "rollup -c"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged",
+			"commit-msg": "commitlint --config .commitlintrc.js -E HUSKY_GIT_PARAMS"
+		}
+	},
+	"lint-staged": {
+		"*.{ts,tsx,js}": [
+			"eslint --config .eslintrc.js"
+		],
+		"*.{css,less,scss}": [
+			"stylelint --config .stylelintrc.js"
+		],
+		"*.{ts,tsx,js,json,html,yml,css,less,scss,md}": [
+			"prettier --write"
+		]
+	},
+	"devDependencies": {
+		"@babel/core": "7.24.0",
+		"@babel/plugin-transform-runtime": "7.24.0",
+		"@babel/preset-env": "7.24.0",
+		"@babel/preset-react": "7.23.3",
+		"@babel/preset-typescript": "7.23.3",
+		"@chromatic-com/storybook": "^1.3.1",
+		"@commitlint/cli": "19.2.0",
+		"@commitlint/config-conventional": "19.1.0",
+		"@rollup/plugin-commonjs": "25.0.7",
+		"@rollup/plugin-node-resolve": "15.2.3",
+		"@rollup/plugin-typescript": "11.1.6",
+		"@storybook/addon-essentials": "^8.0.6",
+		"@storybook/addon-interactions": "^8.0.6",
+		"@storybook/addon-links": "^8.0.6",
+		"@storybook/addon-onboarding": "^8.0.6",
+		"@storybook/blocks": "^8.0.6",
+		"@storybook/react": "^8.0.6",
+		"@storybook/react-vite": "^8.0.6",
+		"@storybook/test": "^8.0.6",
+		"@types/react": "18.2.66",
+		"@types/react-dom": "18.2.22",
+		"@typescript-eslint/eslint-plugin": "^6.4.0",
+		"@typescript-eslint/parser": "7.2.0",
+		"autoprefixer": "10.4.18",
+		"babel-loader": "9.1.3",
+		"clean-webpack-plugin": "4.0.0",
+		"commitizen": "^4.3.0",
+		"commitlint-config-cz": "^0.13.3",
+		"conventional-changelog-cli": "4.1.0",
+		"cross-env": "7.0.3",
+		"css-loader": "6.10.0",
+		"cz-conventional-changelog": "^3.3.0",
+		"cz-customizable": "^7.0.0",
+		"eslint": "^8.0.1",
+		"eslint-config-prettier": "9.1.0",
+		"eslint-config-standard-with-typescript": "^43.0.1",
+		"eslint-import-resolver-typescript": "3.6.1",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+		"eslint-plugin-promise": "^6.0.0",
+		"eslint-plugin-react": "^7.34.1",
+		"eslint-plugin-storybook": "^0.8.0",
+		"html-webpack-plugin": "5.6.0",
+		"husky": "9.0.11",
+		"less": "4.2.0",
+		"less-loader": "12.2.0",
+		"lint-staged": "15.2.2",
+		"node-sass": "9.0.0",
+		"postcss": "8.4.35",
+		"postcss-flexbugs-fixes": "5.0.2",
+		"postcss-loader": "8.1.1",
+		"postcss-normalize": "10.0.1",
+		"postcss-preset-env": "9.5.1",
+		"prettier": "3.2.5",
+		"rollup": "4.13.0",
+		"rollup-plugin-dts": "6.1.0",
+		"rollup-plugin-postcss": "4.0.2",
+		"sass-loader": "14.1.1",
+		"storybook": "^8.0.6",
+		"style-loader": "3.3.4",
+		"stylelint": "16.2.1",
+		"stylelint-config-prettier": "9.0.5",
+		"stylelint-config-rational-order": "0.1.2",
+		"stylelint-config-standard": "36.0.0",
+		"stylelint-declaration-block-no-ignored-properties": "2.8.0",
+		"stylelint-prettier": "5.0.0",
+		"typescript": "5.4.2",
+		"vite": "^5.2.8",
+		"webpack": "5.90.3",
+		"webpack-cli": "5.1.4",
+		"webpack-dev-server": "5.0.3",
+		"webpack-merge": "5.10.0"
+	},
+	"config": {
+		"commitizen": {
+			"path": "node_modules/cz-customizable"
+		}
+	},
+	"dependencies": {
+		"@babel/runtime-corejs3": "7.24.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	}
 }
