--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "lint_demo",
+	"name": "react_comp_template",
 	"version": "1.0.0",
 	"description": "a lint demo ",
 	"main": "./dist/cjs/index.js",
