--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -15,9 +15,13 @@ jobs:
         run: |
           yarn install
           yarn run build-storybook
+      - name: Deploy to GitHub Pages
+		  if: success()
+		  uses: crazy-max/ghaction-github-pages@v3
+		  with:
+			target_branch: gh-pages
+			build_dir: storybook-static
+			commit_message: 'chore(deploy): Storybook'
+			keep_history: false
+			jekyll: false
 
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.6.2
-        with:
-          branch: gh-pages
-          folder: storybook-static # npm run build-storybook输出的文件夹
