--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -24,3 +24,5 @@ jobs:
           commit_message: 'chore(deploy): Storybook'
           keep_history: false
           jekyll: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.NPM_GITHUB_PACKAGES }}
