--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,7 +2,7 @@ name: Storybook Build
 on:
   push:
     branches:
-      - rollup_comp # if any push happens on branch `main`, run this workflow. You could also add `paths` to detect changes in specific folder
+      - rollup_comp
 
 jobs:
   build-and-deploy:
@@ -11,18 +11,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
-      - name: Install and Build
+      - name: Install and Build # 安装并且构建组件库文档
         run: |
           yarn install
           yarn run build-storybook
-      - name: Deploy to GitHub Pages
-        if: success()
-        uses: crazy-max/ghaction-github-pages@v3
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@3.6.2
         with:
-          target_branch: gh-pages
-          build_dir: storybook-static
-          commit_message: 'chore(deploy): Storybook'
-          keep_history: false
-          jekyll: false
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: storybook-static # npm run build-storybook输出的文件夹
+
