feat: 瀑布流架子

--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "7.24.0",
+    "axios": "^1.6.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
